<resources>
    <string name="app_name">Exploring</string>
    <string name="selectHour">Set Hour ( 1 to 12 )</string>
    <string name="selectMinute">Set Minute ( 1 to 60 )</string>
    <string name="setAlarm">Set Alarm</string>
    <string name="enterMessage">Enter Message</string>
    <string name="sendMessage">Send Message</string>
    <string name="enterResponse">Enter Response</string>
    <string name="sendResponse">Send Response</string>
    <string name="responseMessage"></string>
    <string name="sectionAlarm">Alarm Section</string>
    <string name="sectionSendMessage">Send Message Section</string>
    <string name="sectionChooseColor">Choose Color Section</string>
    <string name="spinnerTitle">Select a Color</string>

</resources>