<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_sendMessageSection"
        android:layout_width="248dp"
        android:layout_height="33dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="79dp"
        android:text="@string/sectionSendMessage"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spr_chooseColor" />

    <TextView
        android:id="@+id/tv_chooseColorSection"
        android:layout_width="255dp"
        android:layout_height="41dp"
        android:layout_marginTop="64dp"
        android:text="@string/sectionChooseColor"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_setAlarm" />

    <Button
        android:id="@+id/btn_setAlarm"

        android:layout_width="134dp"
        android:layout_height="41dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="129dp"
        android:text="@string/setAlarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_setMinute" />

    <EditText
        android:id="@+id/et_setMinute"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/selectMinute"
        android:inputType="number"
        android:maxLength="60"
        app:layout_constraintBottom_toTopOf="@+id/btn_setAlarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_setHour" />

    <EditText
        android:id="@+id/et_setHour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="88dp"
        android:ems="10"
        android:hint="@string/selectHour"
        android:inputType="number"
        android:maxLength="24"
        android:shadowColor="#0E0D0D"
        app:layout_constraintBottom_toTopOf="@+id/et_setMinute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/et_enterMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/enterMessage"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_sendMessage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sendMessageSection"
        app:layout_constraintVertical_bias="0.687" />

    <Button
        android:id="@+id/btn_sendMessage"
        android:layout_width="138dp"
        android:layout_height="42dp"
        android:layout_marginEnd="52dp"
        android:text="@string/sendMessage"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_enterMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_enterMessage" />

    <TextView
        android:id="@+id/tv_response"
        android:layout_width="118dp"
        android:layout_height="23dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_enterMessage" />

    <Spinner
        android:id="@+id/spr_chooseColor"
        android:layout_width="343dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:entries="@array/color_array"
        android:prompt="@string/spinnerTitle"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_chooseColorSection" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="186dp"
        android:layout_height="34dp"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sectionAlarm"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_setHour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>